--- a/Labs/Lab1/Lab1/Assembly-CSharp.csproj
+++ b/Labs/Lab1/Lab1/Assembly-CSharp.csproj
@@ -62,7 +62,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\TankController.cs" />
+    <Compile Include="Assets\Scripts\ShootingScript.cs" />
+    <Compile Include="Assets\Scripts\TankController.cs" />
+    <Compile Include="Assets\Scripts\Wall.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/Cian Morar/Documents/College Work/Year4/Semester1/Games_Engines_1/Labs/Lab1/Lab1/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
